--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    }
+  ],
   "routes": [
     {
       "src": "/api/contact",
@@ -7,7 +13,7 @@
     }
   ],
   "functions": {
-    "pages/api/*.js": {
+    "pages/api/**/*.js": {
       "maxDuration": 30
     }
   }
