--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src":"/pages/api/**/*",
+      "use": "@vercel/node"
+    },
+    {
+      "src":"/pages/**/*",
+      "use": "@vercel/next"
+    }
+  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
