--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,34 @@
-name: Deploy to Vercel
+# name: Deploy to Vercel
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
+#     - name: Set up Node.js
+#       uses: actions/setup-node@v2
+#       with:
+#         node-version: '16'
 
-    - name: Install dependencies
-      run: npm install
+#     - name: Install dependencies
+#       run: npm install
 
-    - name: Build Next.js app
-      run: npm run build
+#     - name: Build Next.js app
+#       run: npm run build
 
-    - name: Deploy to Vercel
-      env:
-        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-        EMAIL_USER: ${{ secrets.EMAIL_USER }}
-        EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
-      run: |
-        npm install -g vercel
-        vercel --prod --token $VERCEL_TOKEN
+#     - name: Deploy to Vercel
+#       env:
+#         VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+#         EMAIL_USER: ${{ secrets.EMAIL_USER }}
+#         EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
+#       run: |
+#         npm install -g vercel
+#         vercel --prod --token $VERCEL_TOKEN
