--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,26 @@
-// {
-//   "version": 2,
-//   "builds": [
-//     {
-//       "src":"/pages/api/**/*",
-//       "use": "@vercel/node"
-//     },
-//     {
-//       "src":"/pages/**/*",
-//       "use": "@vercel/next"
-//     }
-//   ],
-//   "rewrites": [
-//     {
-//       "source": "/api/(.*)",
-//       "destination": "/api/$1"
-//     }
-//   ],
-//   "routes": [
-//     {
-//       "src": "/api/contact",
-//       "methods": ["GET", "POST"],
-//       "dest": "/api/contact"
-//     }
-//   ]
-// }
+{
+  "version": 2,
+  "builds": [
+    {
+      "src":"/pages/api/**/*",
+      "use": "@vercel/node"
+    },
+    {
+      "src":"/pages/**/*",
+      "use": "@vercel/next"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/contact",
+      "methods": ["GET", "POST"],
+      "dest": "/api/contact"
+    }
+  ]
+}
